--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1,200 +1,158 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Global Air Quality Analysis Dashboard (Colab Friendly)\n",
-                "\n",
-                "### 📦 How to upload the whole project to Colab in one go:\n",
-                "1. **On your map/computer**: Right-click your project folder and select \"Compress\" or \"Send to ZIP\". Name it `project.zip`.\n",
-                "2. **On Colab**: Click the folder icon on the left, then the 'Upload' button, and select your `project.zip`.\n",
-                "3. **Run Cell 1**: Run the \"Unzip Helper\" below.\n",
-                "4. **Run Cell 2**: Install dependencies.\n",
-                "5. **Run the rest**: See the interactive dashboard!"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Cell 1: Unzip Project (Run this after uploading `project.zip`)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "!unzip project.zip"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Cell 2: Install Dependencies"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "!pip install pandas numpy matplotlib seaborn scikit-learn joblib plotly statsmodels nbformat"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 1. Setup & Imports"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import os\n",
-                "import sys\n",
-                "import pandas as pd\n",
-                "import numpy as np\n",
-                "import plotly.express as px\n",
-                "import plotly.graph_objects as go\n",
-                "from sklearn.model_selection import train_test_split\n",
-                "import joblib\n",
-                "\n",
-                "# Ensure the current directory is in the path so we can import 'src'\n",
-                "sys.path.append(os.getcwd())\n",
-                "\n",
-                "# Import our professional Clean Architecture modules\n",
-                "from src.infrastructure.data_loader import load_air_quality_data\n",
-                "from src.use_cases.data_cleaning import preprocess_pipeline\n",
-                "from src.use_cases.feature_engineering import calculate_aqi_index, encode_target\n",
-                "from src.shared.config import POLLUTANTS, METEOROLOGICAL\n",
-                "from src.infrastructure.model_factory import run_all_models"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 2. Load & Preprocess Data"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "df = load_air_quality_data()\n",
-                "if df is not None:\n",
-                "    df = calculate_aqi_index(df, POLLUTANTS)\n",
-                "    df = preprocess_pipeline(df, POLLUTANTS)\n",
-                "    df, _ = encode_target(df)\n",
-                "    print(f\"Data loaded successfully! Shape: {df.shape}\")\n",
-                "    display(df.head())\n",
-                "else:\n",
-                "    print(\"ERROR: Data file not found. Please ensure 'project.zip' was unzipped correctly.\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Interactive Data Exploration"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "fig_aqi = px.histogram(df, x=\"AQI\", color=\"AQI_Category\", \n",
-                "                       title=\"AQI Distribution Across Records\", \n",
-                "                       template=\"plotly_dark\")\n",
-                "fig_aqi.show()\n",
-                "\n",
-                "fig_temp = px.scatter(df, x=\"Temperature\", y=\"AQI\", color=\"AQI_Category\", \n",
-                "                     trendline=\"ols\", hover_data=['City', 'Country'],\n",
-                "                     title=\"Relationship Between Temperature and AQI\",\n",
-                "                     template=\"plotly_white\")\n",
-                "fig_temp.show()"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 4. Model Training & Comparison"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "features = POLLUTANTS + METEOROLOGICAL\n",
-                "X = df[features]\n",
-                "y = df['AQI']\n",
-                "\n",
-                "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-                "\n",
-                "print(\"Training models (this may take a few moments)...\")\n",
-                "results = run_all_models(X_train, X_test, y_train, y_test)\n",
-                "\n",
-                "# Display Model Performance Table\n",
-                "metrics = []\n",
-                "for name, data in results.items():\n",
-                "    metrics.append({\"Model\": name, \"MSE\": data['metrics']['MSE'], \"R2 Score\": data['metrics']['R2']})\n",
-                "\n",
-                "df_results = pd.DataFrame(metrics).sort_values(by=\"R2 Score\", ascending=False)\n",
-                "display(df_results)"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 5. Visualizing Model Accuracy"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "fig_models = px.bar(df_results, x=\"Model\", y=\"R2 Score\", color=\"R2 Score\",\n",
-                "                   title=\"Machine Learning Model Comparison\", \n",
-                "                   labels={'R2 Score': 'R² Accuracy'})\n",
-                "fig_models.show()"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "name": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.9.6"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Global Air Quality Analysis Dashboard (Enhanced)\n",
+    "\n",
+    "### 📦 How to upload the whole project to Colab in one go:\n",
+    "1. **On your computer**: Zip `src`, `data`, `results` and this `.ipynb` into `project.zip`.\n",
+    "2. **On Colab**: Upload `project.zip` to the folders tab.\n",
+    "3. **Run Cell 1 & 2**: Unzip and install dependencies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 1: Unzip\n",
+    "!unzip project.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 2: Dependencies\n",
+    "!pip install pandas numpy matplotlib seaborn scikit-learn joblib plotly statsmodels nbformat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import plotly.express as px\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "sys.path.append(os.getcwd())\n",
+    "from src.infrastructure.data_loader import load_air_quality_data\n",
+    "from src.use_cases.data_cleaning import preprocess_pipeline\n",
+    "from src.use_cases.feature_engineering import calculate_aqi_index, encode_target\n",
+    "from src.use_cases.temporal_analysis import extract_temporal_features\n",
+    "from src.shared.config import POLLUTANTS, METEOROLOGICAL\n",
+    "from src.infrastructure.model_factory import run_all_models\n",
+    "from src.presentation.visualizer import plot_temporal_trends, plot_country_comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = load_air_quality_data()\n",
+    "df = calculate_aqi_index(df, POLLUTANTS)\n",
+    "df = preprocess_pipeline(df, POLLUTANTS)\n",
+    "df = extract_temporal_features(df)\n",
+    "df, _ = encode_target(df)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Comparative Analysis (By Country)\n",
+    "Which countries have the highest average AQI?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_avg = df.groupby('Country')['AQI'].mean().sort_values(ascending=False).head(15).reset_index()\n",
+    "fig = px.bar(country_avg, x='AQI', y='Country', orientation='h', color='AQI', title=\"Top 15 Most Polluted Countries (Comparative Analysis)\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Cycle Identification (Temporal Analysis)\n",
+    "Identifying monthly and seasonal cycles in air quality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_avg = df.groupby(['Month', 'Season'])['AQI'].mean().reset_index()\n",
+    "fig = px.line(monthly_avg, x='Month', y='AQI', color='Season', markers=True, title=\"Monthly AQI Cycles\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Machine Learning Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = POLLUTANTS + METEOROLOGICAL\n",
+    "X = df[features]\n",
+    "y = df['AQI']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "results = run_all_models(X_train, X_test, y_train, y_test)\n",
+    "perf = pd.DataFrame([{\"Model\": n, \"R2\": d['metrics']['R2']} for n, d in results.items()]).sort_values(\"R2\", ascending=False)\n",
+    "px.bar(perf, x=\"Model\", y=\"R2\", color=\"R2\", title=\"Model R² Comparison\").show()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
